--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -569,6 +569,8 @@
       }
     }
 
+    /* About Component */
+
     /* Demo Component */
     .demo {
       font-size: 0.8rem;
@@ -804,6 +806,36 @@
       }
     }
 
+    /* About Component */
+
+    /* About Componet */
+    .about-container {
+      width: 99%;
+      flex-wrap: wrap;
+      .rectangle1,
+      .rectangle2 {
+        display: none;
+      }
+
+      .about-image {
+        margin: 0;
+        width: 300px;
+        height: 400px;
+        // border: 6px solid #b68a2352;
+      }
+      section {
+        margin: 0;
+        gap: 0;
+        max-width: 100vw;
+        text-align: center;
+
+        p {
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
+        }
+      }
+    }
     /* Hero component */
     .hero-container {
       display: flex;
@@ -1002,9 +1034,7 @@
 
       .rectangle1,
       .rectangle2 {
-        left: 16rem;
-        width: 430px;
-        height: 600px;
+        display: none;
       }
 
       .about-image {
@@ -1014,14 +1044,17 @@
         // border: 6px solid #b68a2352;
       }
       section {
+        width: 100%;
         margin-top: 10rem;
+        margin: 0;
         gap: 0;
         max-width: 100vw;
         text-align: center;
 
         p {
           font-size: 1rem;
-          width: 100vw;
+
+          width: 100%;
           margin-bottom: 1rem;
         }
       }
